--- a/index.html
+++ b/index.html
@@ -149,15 +149,14 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <script>
-    // TODO: Replace with your Firebase config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      databaseURL: "YOUR_DATABASE_URL",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyBsteq-tHQdiDcRk5UBg52AwAxpVcq67cw",
+      authDomain: "gullytest3.firebaseapp.com",
+      databaseURL: "https://gullytest3-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "gullytest3",
+      storageBucket: "gullytest3.firebasestorage.app",
+      messagingSenderId: "876083677912",
+      appId: "1:876083677912:web:065de0c7cca446b78f65ad"
     };
     firebase.initializeApp(firebaseConfig);
 
