--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 </head>
 <body>
   <!-- LOGIN PAGE HEADER -->
-  <div id="loginBg" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:url('cork_city_hall_day.jpg') center center/cover no-repeat; z-index:0;"></div>
   <div class="container d-flex align-items-center justify-content-center" style="min-height:100vh; position:relative; z-index:1;" id="loginContainer">
     <div class="login-card">
       <div class="login-header">
@@ -1115,8 +1114,12 @@
       if (user) {
         showToolbar(true);
         updateUserInfoBar();
+        document.getElementById('mainApp').style.display = 'block';
+        document.getElementById('loginContainer').style.display = 'none';
       } else {
         showToolbar(false);
+        document.getElementById('mainApp').style.display = 'none';
+        document.getElementById('loginContainer').style.display = 'flex';
       }
     });
     // Update user info bar
