--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       margin: 0;
     }
     #loginBg {
-      display: none;
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
       background: url('cork_city_hall_day.jpg') center center/cover no-repeat;
       z-index: 0;
+      display: none;
     }
     #loginBgOverlay {
-      display: none;
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
       background: rgba(30,30,30,0.45);
       z-index: 1;
+      display: none;
     }
     .login-card {
       background: #fff;
@@ -144,6 +144,9 @@
         font-size: 1.1rem;
       }
     }
+    #functionToolbar {
+      display: none !important;
+    }
   </style>
 </head>
 <body>
@@ -247,12 +250,11 @@
   </div>
 
   <!-- MAIN APP CONTAINER -->
-  <div id="mainApp" style="display:none; height:100vh; width:100vw; position:relative;">
+  <div id="mainApp" style="display:none; height:calc(100vh - 56px); width:100vw; position:relative; overflow:hidden;">
     <div id="map" style="height:100%; width:100%;"></div>
   </div>
 
   <!-- TASKS BUTTON AND MODAL -->
-  <button id="tasksBtn" class="btn btn-secondary" style="position:absolute;top:60px;right:20px;z-index:1100;display:none;">Tasks</button>
   <div class="modal fade" id="tasksModal" tabindex="-1" aria-labelledby="tasksModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -291,7 +293,6 @@
   </div>
 
   <!-- REPORTING BUTTON AND MODAL -->
-  <button id="reportingBtn" class="btn btn-info" style="position:absolute;top:110px;right:20px;z-index:1100;display:none;">Reporting</button>
   <div class="modal fade" id="reportingModal" tabindex="-1" aria-labelledby="reportingModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -309,7 +310,6 @@
   </div>
 
   <!-- SUMMARY MODAL -->
-  <button id="summaryBtn" class="btn btn-warning" style="position:absolute;bottom:150px;right:20px;z-index:1100;">Summary</button>
   <div class="modal fade" id="summaryModal" tabindex="-1" aria-labelledby="summaryModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -344,6 +344,9 @@
       <button class="btn btn-outline-secondary toolbar-button" id="editBtn" title="Edit" onclick="enableEditMode()"><i class="bi bi-pencil"></i> Edit</button>
       <button class="btn btn-outline-secondary toolbar-button" id="deleteBtn" title="Delete" onclick="enableDeleteMode()"><i class="bi bi-trash"></i> Delete</button>
       <button class="btn btn-outline-secondary toolbar-button" id="addBtn" title="Add" onclick="enableAddMode()"><i class="bi bi-plus"></i> Add</button>
+      <button class="btn btn-outline-warning toolbar-button" id="summaryBtn" title="Summary" onclick="showSummaryPopup()"><i class="bi bi-bar-chart"></i> Summary</button>
+      <button class="btn btn-outline-success toolbar-button" id="tasksBtn" title="Tasks" onclick="showTasksModal()"><i class="bi bi-list-task"></i> Tasks</button>
+      <button class="btn btn-outline-info toolbar-button" id="reportingBtn" title="Reporting" onclick="showReportingModal()"><i class="bi bi-graph-up"></i> Reporting</button>
     </div>
     <div class="d-flex align-items-center gap-2">
       <span id="userInfo" class="fw-bold"></span>
