--- a/index.html
+++ b/index.html
@@ -1231,15 +1231,11 @@
     }
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) {
-        showToolbar(true);
+        showToolbar(true); // Show the ribbon
         updateUserInfoBar();
-        document.getElementById('mainApp').style.display = 'block';
-        document.getElementById('loginContainer').style.display = 'none';
+        document.getElementById('mainApp').style.display = 'block'; // Show the map
+        document.getElementById('loginContainer').style.display = 'none'; // Hide login
         showLoginBg(false);
-        // Hide asset filter bar if visible on login screen
-        if (document.getElementById('assetFilterBar')) {
-          document.getElementById('assetFilterBar').style.display = 'block';
-        }
         // Force map resize in case it was hidden
         if (window.mapInstance && window.mapInstance.invalidateSize) {
           setTimeout(function() { window.mapInstance.invalidateSize(); }, 300);
